# malib

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  Doxyfile.in  README.md
.github/workflows/: deploy.yml
docs/: Doxyfile.in
docs/html/: annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structVector-members.html  structVector.html  structVector.js  structVector__coll__graph.map  utils_8c.html  utils_8c.js  utils_8c__incl.map  utils_8c__incl.md5  utils_8c_a0b73de2c5ced6e83320662fd9af5fa68_icgraph.map  utils_8c_a0b73de2c5ced6e83320662fd9af5fa68_icgraph.md5  utils_8c_a7cfc8885aaa713b0686a8d1f36b2f483_icgraph.map  utils_8c_a7cfc8885aaa713b0686a8d1f36b2f483_icgraph.md5  utils_8c_ac2ce2e93f97a84c57b18d4e0d4a297c9_icgraph.map  utils_8c_ac2ce2e93f97a84c57b18d4e0d4a297c9_icgraph.md5  utils_8c_source.html  utils_8h.html  utils_8h.js  (+131 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_8.js  defines_0.js  defines_2.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+4 more)
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex  structVector.tex  structVector__coll__graph.md5  utils_8c.tex  utils_8c__incl.md5  utils_8c_a0b73de2c5ced6e83320662fd9af5fa68_icgraph.md5  utils_8c_a7cfc8885aaa713b0686a8d1f36b2f483_icgraph.md5  utils_8c_ac2ce2e93f97a84c57b18d4e0d4a297c9_icgraph.md5  utils_8c_source.tex  utils_8h.tex  utils_8h__dep__incl.md5  utils_8h__incl.md5  utils_8h_a0b73de2c5ced6e83320662fd9af5fa68_icgraph.md5  utils_8h_a7cfc8885aaa713b0686a8d1f36b2f483_icgraph.md5  utils_8h_abd589590a78a76840c5c97b9f1159fad_cgraph.md5  utils_8h_ac2ce2e93f97a84c57b18d4e0d4a297c9_icgraph.md5  utils_8h_source.tex  vector_8c.tex  vector_8c__incl.md5  vector_8c_a081d011505b3f586c5d61c3cdc4b8184_cgraph.md5  vector_8c_a4d336f46f91c3fd83c304b9be52e4143_cgraph.md5  vector_8c_a594a9fbde1c9cb0f48d47aaa87bf9412_cgraph.md5  vector_8c_a5a141c5e57f20cf28639e08c687c4020_cgraph.md5  vector_8c_a6052d66f055cffe9ec297f112cb70cbd_icgraph.md5  vector_8c_a6ac4102b3d78057f073a6190f69bfab3_cgraph.md5  vector_8c_a72739ab163a448803c21b2d0d8798c30_icgraph.md5  vector_8c_a82877e74fb1d8941f9077cbed7a6f239_cgraph.md5  vector_8c_a970ef0557a2312cb8fac272b29e5819a_icgraph.md5  vector_8c_a9776cabefa7fe4b72d1b424ea12f17a7_cgraph.md5  vector_8c_a9aedc714136894389aeb36a5eae94d9a_cgraph.md5  vector_8c_aa5587dfc6e3d7ec77e6545af3651de19_cgraph.md5  vector_8c_aaca804fcf27db27b7b123264e9cff5c1_cgraph.md5  vector_8c_ac24b098b914766869dc264fd51fbcba0_cgraph.md5  vector_8c_ac24b098b914766869dc264fd51fbcba0_icgraph.md5  vector_8c_ac442a8a2b003e592738421dd0b7fdde5_cgraph.md5  vector_8c_ac49c39fc5a31eeb645bdf57a8846770f_cgraph.md5  (+41 more)
examples/: factorials.c
include/: utils.h  vector.h
src/: utils.c  vector.c
tests/: utils_test.c
